--- a/Flask-Routing-Lab/static/css/style.css
+++ b/Flask-Routing-Lab/static/css/style.css
@@ -1,1 +1,40 @@
 
+
+.header {
+	color: lightseagreen;
+	font-family: monospace;
+	font-size: 50px;
+	text-align: center;
+}
+
+.homeSection{
+	background-color: slategrey;
+}
+
+.trending{
+	font-family: revert;
+	color: floralwhite;
+	padding-bottom: 30px;
+	font-size: 30px;
+}
+
+.trendingImg{
+	width: 15%;
+	height: 200px;
+	padding-right: 15px;
+	padding-left: 10px;
+	align-content: center;
+}
+
+.description{
+	font-size: 25px;
+	text-align: center;
+	color: deepskyblue;
+	background-color: beige;
+}
+
+.product{
+	font-size: 25px;	
+	color: deepskyblue;
+	background-color: beige;
+}
